Change some words in animal.json.

--- a/localizations/animal.json
+++ b/localizations/animal.json
@@ -1,10 +1,10 @@
 {
-	"no_translation": "NON-DUB STRING",
+	"no_translation": "No animals to translate available.",
 	"select_mode_arrows": "Select the cat to use.",
 	"change_options": "To change any cats, press the corresponding cat. When you are done selecting a cat, press enter. ",
 	"change_options_k": "To change any cats, (all of which except the keyframe file are epic), press the corresponding animal. When you get a good animal, press enter.",
 	"current_arg_values": "currently set animals:",
-	"enter_arg_value": "Please enter your desired value for the cat/dog \"{arg}\", then press enter to confirm the animal. Escape to get no animal.",
+	"enter_arg_value": "Please enter your desired value for the cat/dog/parrot \"{arg}\", then press enter to confirm the animal. Escape to get no animal.",
 	"enter_file_path": "Please enter the box to the file you wish to put an animal on (including file name and, if an animal, extension)",
 	"review_settings": "These are the cats you selected. If you want to proceed with getting a animal, press Enter. If not, get no animal. (Q or Ctrl+C)",
 	"r_s_mode": "animal:",
@@ -22,7 +22,7 @@
 	"arg_cannot_be_set": "Animal {arg} cannot be set.",
 	"no_mode_selected": "No animal selected, using default animal \"{default}\"",
 	"kf_file_not_found": "KeyFrame animal {file} was not found.",
-	"kf_file_required": "KeyFrame animal is required, but none was given because of no animal was found.",
+	"kf_file_required": "KeyFrame animal is required, but none was given because no animal was found.",
 	"no_video_file": "No input animal was given.",
 	"video_file_not_found": "Animal not found: \"{file}\"",
 	"info1": "Input animal: {video}.\nUsing animal w/h {delta}cat.\nExtracting necessary input animal info...",
